<resources>
    <string name="app_name">SuperApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="goBack">Atrás</string>
    <string name="menu_calculadora">Calculadora</string>
    <string name="menu_encuesta">Encuesta</string>
    <string name="menu_listview">Listview</string>
    <string name="menu_sensores">Sensores</string>
    <string name="btn_multiplicar">multiplicar</string>
    <string name="btn_dividir">dividir</string>
    <string name="btn_restar">restar</string>
    <string name="btn_sumar">sumar</string>

    <string name="app_color_preferido">¿Color preferido?</string>
    <string name="app_radio_1">Rojo</string>
    <string name="app_radio_2">Azul</string>
    <string name="app_radio_3">Negro</string>
    <string name="app_radio_4">Amarillo</string>
    <string name="app_privacy">¿Aceptas las politicas de privacidad?</string>
    <string name="app_texto_si">Si</string>
    <string name="app_texto_genial">Todo genial</string>
    <string name="app_enviar">Enviar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="result">Result</string>
    <string name="num2">Num2</string>
    <string name="num1">Num1</string>
    <string name="menu_camera">Camara</string>
    <string name="menu_preferences">Preferencias</string>
</resources>